# LOB-Predictive-Engine

./: .gitignore  CMakeLists.txt  README.md
analysis/: alpha_analysis.py
include/: engine.hpp  websocket.hpp
src/: engine.cpp  main.cpp  websocket.cpp
